--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,40 +1,43 @@
-ion-content {
-    display: flex;
-    justify-content: center; /* Centra verticalmente si necesitas */
-    align-items: center; /* Centra horizontalmente */
-  }
-  
-  .content-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end; /* Asegura que los botones estén en la parte inferior */
-    width: 100%;
-    padding: 32px; /* Espacio a los lados */
-    gap: 16px; /* Espacio entre input-container y button-container */
-    height: 100%; /* Asegura que el contenedor ocupe todo el espacio disponible */
- }
-
- /*
-.bg{
-  position: absolute;
-  width: 100%;
-  height: 100lh;
-  left: 0px;
-  top: 0px;
-  
-  background: linear-gradient(180deg, rgba(125, 76, 152, 0.16) 0%, rgba(0, 0, 0, 0.8) 100%);
-}
-*/
-
-.logo-container {
+.login-content{
+ /* --background: url('assets/bg.png') no repeat center center/cover;
+  background-image: url(assets/bg.png);*/
+  background-size: cover;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  align-items: center;
 }
 
-.circular-logo {
-  width: 100px;
-  height: 100px;
+.login-card{
+  background: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  margin-top: 35%;
+}
+
+.logo{
+  width: 80px;
+  height: 80px;
+  margin-bottom: 20px;
   border-radius: 50%;
-  object-fit: cover;
+}
+
+h1{
+  color: white;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+ion-item{
+  --background: transparent;
+  margin-bottom: 10px;
+}
+
+.login-button{
+  --background: #800080;
+  color: white;
+  border-radius: 20px;
+  margin-top: 20px;
 }
