--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,24 +1,33 @@
-<ion-content [fullscreen]="true" class="login">
+<ion-header>
+  <ion-toolbar>
+    <ion-title>
+      Login
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
-  <div class="logo-container">
-    <img src="assets\RatiMag.webp" alt="logo" class="circular-logo" />
-  </div>
+<ion-content [fullscreen]="true" class="login-content">
 
-  <div class="content-container">
-    <!-- Contenedor para los inputs -->
-    <div class="input-container">
-      <ion-item>
-        <ion-input placeholder="Usuario o Correo" type="text" [(ngModel)]="email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input placeholder="Contraseña" type="password" [(ngModel)]="password"></ion-input>
-      </ion-item>
-    </div>
+  <div class="login-card">
+    <img src="assets/RatiMag.webp" alt="logo" class="logo">
+    <h1>
+      Welcome to FrikyRotte
+    </h1>
 
-    <!-- Contenedor para los botones -->
-    <div class="button-container">
-      <ion-button expand="block" (click)="onLoginButtonPressed()">Login</ion-button>
-      <ion-button expand="block" (click)="onRegisterButtonPressed()">Register</ion-button>
-    </div>
+    <ion-item>
+      <ion-label position="floating">Email/Username</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" class="login-button" (click)="onLoginButtonPressed()">Login</ion-button>
+
+    <ion-text>
+      <p class="ion-text-center">¿Don't have an account? <a routerLink="/register">Sign Up</a></p>
+    </ion-text>
   </div>
 </ion-content>
