--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,12 +16,12 @@
 
     <ion-item>
       <ion-label position="floating">Email/Username</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="email"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
 
     <ion-button expand="block" class="login-button" (click)="onLoginButtonPressed()">Login</ion-button>
