--- a/src/app/modules/register/register.page.html
+++ b/src/app/modules/register/register.page.html
@@ -10,32 +10,37 @@
 
   <div class="content-container">
     <div class="input-container">
-    
+
       <ion-item>
         <ion-input placeholder="Correo" type="email" [(ngModel)]="email"></ion-input>
       </ion-item>
 
+      <!--
+
       <ion-item>
         <ion-input placeholder="Usuario" type="text" [(ngModel)]="username"></ion-input>
       </ion-item>
-
+-->
       <ion-item>
         <ion-input placeholder="Contraseña" type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
-
+      <!--
       <ion-item>
         <ion-input placeholder="Confirmar Contraseña" type="password" [(ngModel)]="confirmPassword"></ion-input>
       </ion-item>
     </div>
 
-    <div class="button-container">
+    -->
 
-      <ion-button expand="block" (click)="onRegisterButtonPressed()">Registrarse</ion-button>
+      <div class="button-container">
 
-      <ion-text>
-        <p class="ion-text-center">¿Ya tienes una cuenta? <a routerLink="/login">Inicia sesión</a></p>
-      </ion-text>
+        <ion-button expand="block" (click)="onRegisterButtonPressed()">Registrarse</ion-button>
+
+        <ion-text>
+          <p class="ion-text-center">¿Ya tienes una cuenta? <a routerLink="/login">Inicia sesión</a></p>
+        </ion-text>
+      </div>
     </div>
   </div>
-  
+
 </ion-content>
