--- a/src/app/modules/register/register.page.html
+++ b/src/app/modules/register/register.page.html
@@ -1,45 +1,32 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Registro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
   </ion-header>
 
   <div class="content-container">
+    <img src="assets/RatiMag.webp" alt="logo" class="logo">
     <div class="input-container">
 
+
+      <h1>
+        Welcome to FrikyRotte
+      </h1>
+
       <ion-item>
-        <ion-input placeholder="Correo" type="email" [(ngModel)]="email"></ion-input>
+        <ion-label position="floating">Email/Username</ion-label>
+        <ion-input type="email" [(ngModel)]="email"></ion-input>
       </ion-item>
 
-      <!--
-
       <ion-item>
-        <ion-input placeholder="Usuario" type="text" [(ngModel)]="username"></ion-input>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
--->
-      <ion-item>
-        <ion-input placeholder="Contraseña" type="password" [(ngModel)]="password"></ion-input>
-      </ion-item>
-      <!--
-      <ion-item>
-        <ion-input placeholder="Confirmar Contraseña" type="password" [(ngModel)]="confirmPassword"></ion-input>
-      </ion-item>
-    </div>
 
-    -->
+      <ion-button expand="block" class="login-button" (click)="onRegisterButtonPressed()">Sign up</ion-button>
 
-      <div class="button-container">
+      <ion-text>
+        <p class="ion-text-center">Do you have an account? <a routerLink="/login">Login</a></p>
+      </ion-text>
 
-        <ion-button expand="block" (click)="onRegisterButtonPressed()">Registrarse</ion-button>
-
-        <ion-text>
-          <p class="ion-text-center">¿Ya tienes una cuenta? <a routerLink="/login">Inicia sesión</a></p>
-        </ion-text>
-      </div>
     </div>
   </div>
 
