--- a/src/app/modules/splash/splash.page.html
+++ b/src/app/modules/splash/splash.page.html
@@ -1,13 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>splash</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">SPLASH</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="container">
+    <!-- Contenedor de la imagen de fondo y el círculo de enfoque -->
+    <div class="background-image"></div>
+    <div class="focus-circle"></div>
+  </div>
 </ion-content>
