--- a/src/app/modules/detalle/detalle.page.html
+++ b/src/app/modules/detalle/detalle.page.html
@@ -5,13 +5,43 @@
         <ion-icon name="arrow-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-title>Película Detalle</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Pagina en proceso...</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- Mostrar las películas populares -->
+  <ion-list>
+    <ion-item *ngFor="let movie of movies" (click)="selectMovie(movie.id)">
+      <ion-thumbnail slot="start">
+        <img [src]="'https://image.tmdb.org/t/p/w92/' + movie.poster_path" alt="Poster de la película" />
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ movie.title }}</h2>
+        <p>{{ movie.release_date | date }}</p>
+        <!-- Mostrar la valoración en estrellas -->
+        <div class="stars">
+          <ion-icon *ngFor="let star of getStars(movie.vote_average)" name="star" color="gold"></ion-icon>
+          <ion-icon *ngFor="let star of getEmptyStars(movie.vote_average)" name="star-outline" color="gold"></ion-icon>
+        </div>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <!-- Mostrar detalles de la película seleccionada -->
+  <ion-card *ngIf="movieDetail">
+    <img [src]="'https://image.tmdb.org/t/p/w500/' + movieDetail?.poster_path" />
+    <ion-card-title>{{ movieDetail?.title }}</ion-card-title>
+    <ion-card-subtitle>{{ movieDetail?.release_date | date }}</ion-card-subtitle>
+    <p>{{ movieDetail?.overview }}</p>
+
+    <!-- Mostrar la valoración en estrellas -->
+    <ion-item>
+      <ion-label>Valoración:</ion-label>
+      <div class="stars">
+        <ion-icon *ngFor="let star of getStars(movieDetail?.vote_average)" name="star" color="gold"></ion-icon>
+        <ion-icon *ngFor="let star of getEmptyStars(movieDetail?.vote_average)" name="star-outline" color="gold"></ion-icon>
+      </div>
+    </ion-item>
+  </ion-card>
 </ion-content>
