--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -25,7 +25,9 @@
     <ion-icon name="game-controller-outline"></ion-icon>
     <ion-label>Juegos</ion-label>
   </ion-segment-button>
-  <ion-segment-button value="pin">
-    <ion-icon name="pin"></ion-icon>
+  <ion-segment-button value="anime" (click)="navigateToDetail('anime')">
+    <ion-icon name="tv-outline"></ion-icon>
+    <ion-label>Animes</ion-label>
   </ion-segment-button>
+  
 </ion-segment>
