--- a/src/app/modules/detalle/detalle.page.scss
+++ b/src/app/modules/detalle/detalle.page.scss
@@ -19,4 +19,11 @@
     font-weight: bold;
     margin-left: 5px;
   }
+  .no-more-results {
+    text-align: center;
+    padding: 10px;
+    color: #888;
+  }
+
+  
   
